--- a/lib/views/index.hbs
+++ b/lib/views/index.hbs
@@ -9,7 +9,7 @@
     <center>
       <p>{{iterationCount}} iteration(s)</p>
       <img src="/image.png">
-      <p id="message">sending image</p>
+      <p id="message"></p>
     </center>
     <script>
       const ws = new WebSocket('ws://localhost:{{websocketPort}}')
