--- a/lib/views/index.hbs
+++ b/lib/views/index.hbs
@@ -2,7 +2,7 @@
 <html>
   <head>
     <style>
-      * { font-size: 23pt; }
+      * { font-size: 23pt; font-family: sans-serif; }
     </style>
   </head>
   <body>
