--- a/lib/views/index.hbs
+++ b/lib/views/index.hbs
@@ -3,6 +3,7 @@
   <head>
     <style>
       * { font-size: 23pt; font-family: sans-serif; }
+      img { visibility: hidden; }
     </style>
   </head>
   <body>
@@ -21,6 +22,10 @@
           document.getElementById('message').innerText = event.data
         }
       })
+
+      setTimeout(() => {
+        document.querySelector('img').style.visibility = 'visible'
+      }, 400)
     </script>
   </body>
 </html>
