--- a/lib/views/index.hbs
+++ b/lib/views/index.hbs
@@ -2,7 +2,7 @@
 <html>
   <head>
     <style>
-      * { font-size: 30pt; font-family: sans-serif; }
+      * { font-size: 35pt; font-family: sans-serif; font-weight: bold; }
       img { visibility: hidden; }
     </style>
   </head>
