--- a/lib/views/index.hbs
+++ b/lib/views/index.hbs
@@ -9,7 +9,7 @@
   </head>
   <body>
     <center>
-      <p>{{iterationCount}} iteration(s)</p>
+      <p>{{iterationCount}}</p>
       <img src="/image.png">
       <p id="message">{{currentMessage}}</p>
     </center>
